Update 2.1 AI 的简单介绍.md

--- a/2.1 AI 的简单介绍.md
+++ b/2.1 AI 的简单介绍.md
@@ -1,5 +1,5 @@
 # 第一部分：认识 AI 与 DeepSeek  
-## 第1章：AI 的简单介绍（进一步优化版）
+## 第1章：AI 的简单介绍
 
 > “想象一下，每个清晨，当你还沉浸在梦乡里时，一位智能助手已在为你规划一天的行程。也许你从未意识到，AI早已悄然改变了我们的生活。”
 
