Update 2.1 AI 的简单介绍.md

--- a/2.1 AI 的简单介绍.md
+++ b/2.1 AI 的简单介绍.md
@@ -1,7 +1,7 @@
 # 第一部分：认识 AI 与 DeepSeek  
 ## 第1章：AI 的简单介绍
 
-> “想象一下，每个清晨，当你还沉浸在梦乡里时，一位智能助手已在为你规划一天的行程。也许你从未意识到，AI早已悄然改变了我们的生活。”
+> “在前面的引言中，我们用生动的场景描绘了AI如何在你不经意间改变生活——当你还在梦乡中，智能助手已在为你规划一天的行程。现在，我们将深入探讨：究竟什么是人工智能？它又是如何实现这些令人惊叹的功能的？”
 
 ---
 
